@@ -1,6 +1,6 @@
-Date: 2022-12-29
+Date: 2023-02-10
 Package: CHNOSZ
-Version: 1.9.9-55
+Version: 1.9.9-56
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
