@@ -34,7 +34,7 @@
 @Article{AH97b,
   author    = {Amend, Jan P. and Helgeson, Harold C.},
   journal   = {Journal of the Chemical Society, Faraday Transactions},
-  title     = {{C}alculation of the standard molal thermodynamic properties of aqueous biomolecules at elevated temperatures and pressures. {P}art 1. \textsc{l}-{$\alpha$}-amino acids},
+  title     = {Calculation of the standard molal thermodynamic properties of aqueous biomolecules at elevated temperatures and pressures. {P}art 1. \textsc{l}-{$\alpha$}-amino acids},
   year      = {1997},
   number    = {10},
   pages     = {1927--1941},
@@ -45,7 +45,7 @@
 @Article{AP01,
   author    = {Amend, Jan P. and Plyasunov, Andrey V.},
   journal   = {Geochimica et Cosmochimica Acta},
-  title     = {{C}arbohydrates in thermophile metabolism: {C}alculation of the standard molal thermodynamic properties of aqueous pentoses and hexoses at elevated temperatures and pressures},
+  title     = {Carbohydrates in thermophile metabolism: Calculation of the standard molal thermodynamic properties of aqueous pentoses and hexoses at elevated temperatures and pressures},
   year      = {2001},
   number    = {21},
   pages     = {3901--3917},
@@ -298,7 +298,7 @@
 
 @Article{LA16,
   author    = {LaRowe, Douglas E. and Amend, Jan P.},
-  journal   = {ISME Journal},
+  journal   = {The ISME Journal},
   title     = {The energetics of anabolism in natural settings},
   year      = {2016},
   number    = {6},
@@ -320,7 +320,7 @@
 @Article{LH06a,
   author    = {LaRowe, Douglas E. and Helgeson, Harold C.},
   journal   = {Geochimica et Cosmochimica Acta},
-  title     = {{B}iomolecules in hydrothermal systems: {C}alculation of the standard molal thermodynamic properties of nucleic-acid bases, nucleosides, and nucleotides at elevated temperatures and pressures},
+  title     = {Biomolecules in hydrothermal systems: Calculation of the standard molal thermodynamic properties of nucleic-acid bases, nucleosides, and nucleotides at elevated temperatures and pressures},
   year      = {2006},
   number    = {18},
   pages     = {4680--4724},
@@ -518,7 +518,7 @@
 @Article{PS01,
   author    = {Plyasunov, Andrey V. and Shock, Everett L.},
   journal   = {Geochimica et Cosmochimica Acta},
-  title     = {{C}orrelation strategy for determining the parameters of the revised {H}elgeson-{K}irkham-{F}lowers model for aqueous nonelectrolytes},
+  title     = {Correlation strategy for determining the parameters of the revised {H}elgeson-{K}irkham-{F}lowers model for aqueous nonelectrolytes},
   year      = {2001},
   number    = {21},
   pages     = {3879--3900},
@@ -664,7 +664,7 @@
 @Article{SS93,
   author    = {Schulte, Mitchell D. and Shock, Everett L.},
   journal   = {Geochimica et Cosmochimica Acta},
-  title     = {{A}ldehydes in hydrothermal solution: {S}tandard partial molal thermodynamic properties and relative stabilities at high temperatures and pressures},
+  title     = {Aldehydes in hydrothermal solution: Standard partial molal thermodynamic properties and relative stabilities at high temperatures and pressures},
   year      = {1993},
   number    = {16},
   pages     = {3835--3846},
@@ -708,7 +708,7 @@
 @Article{Sho95,
   author    = {Shock, Everett L.},
   journal   = {American Journal of Science},
-  title     = {{O}rganic acids in hydrothermal solutions: {S}tandard molal thermodynamic properties of carboxylic acids and estimates of dissociation constants at high temperatures and pressures},
+  title     = {Organic acids in hydrothermal solutions: Standard molal thermodynamic properties of carboxylic acids and estimates of dissociation constants at high temperatures and pressures},
   year      = {1995},
   number    = {5},
   pages     = {496--580},
@@ -749,7 +749,7 @@
 @Article{SH90,
   author    = {Shock, Everett L. and Helgeson, Harold C.},
   journal   = {Geochimica et Cosmochimica Acta},
-  title     = {{C}alculation of the thermodynamic and transport properties of aqueous species at high pressures and temperatures: {S}tandard partial molal properties of organic species},
+  title     = {Calculation of the thermodynamic and transport properties of aqueous species at high pressures and temperatures: Standard partial molal properties of organic species},
   year      = {1990},
   number    = {4},
   pages     = {915--945},
@@ -793,7 +793,7 @@
 @Article{SM93,
   author    = {Shock, Everett L. and McKinnon, William B.},
   journal   = {Icarus},
-  title     = {{H}ydrothermal processing of cometary volatiles---{A}pplications to {T}riton},
+  title     = {Hydrothermal processing of cometary volatiles---{A}pplications to {T}riton},
   year      = {1993},
   number    = {2},
   pages     = {464--477},
@@ -1730,22 +1730,6 @@
   doi       = {10.1016/j.gca.2020.04.009},
 }
 
-@Book{VC78,
-  author    = {Vaughan, David J. and Craig, James R.},
-  publisher = {Cambridge University Press},
-  title     = {Mineral Chemistry of Metal Sulfides},
-  year      = {1978},
-  address   = {Cambridge},
-  url       = {https://www.worldcat.org/oclc/801856147},
-}
-
-@Misc{MP20,
-  author    = {{Materials Project}},
-  title     = {mp-1513: Co9S8},
-  year      = {2020},
-  doi       = {10.17188/1191033},
-}
-
 @Article{LXW21,
   author    = {Xiangchong Liu and Changhao Xiao and Yong Wang},
   journal   = {Chemical Geology},
@@ -1765,4 +1749,25 @@
   pages     = {755--806},
   volume    = {317},
   doi       = {10.2475/07.2017.01},
+}
+
+@Article{WV22,
+  author    = {Williams-Jones, A. E. and Vasyukova, O. V.},
+  journal   = {Economic Geology},
+  title     = {Constraints on the genesis of cobalt deposits: {P}art {I}. {T}heoretical considerations},
+  year      = {2022},
+  number    = {3},
+  pages     = {513--528},
+  volume    = {117},
+  doi       = {10.5382/econgeo.4895},
+}
+
+@Book{PMW87,
+  author    = {L. B. Pankratz and A. D. Mah and S. W. Watson},
+  publisher = {United States Department of the Interior, Bureau of Mines},
+  title     = {Thermodynamic Properties of Sulfides},
+  year      = {1987},
+  number    = {689},
+  series    = {Bulletin},
+  url       = {https://www.worldcat.org/oclc/16131757},
 }
